--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,10 +13,8 @@ body {
 }
 
 a {
-  color: inherit;
-  color: inherit;
-  text-decoration: none;
-  text-decoration: none;
+  @apply text-blue-600 hover:text-blue-800;
+  
 }
 
 
@@ -38,4 +36,8 @@ select,
 textarea {
   @apply rounded border p-2  outline-none ring-indigo-300  focus:ring;
 
+}
+
+.dropdown-link {
+  @apply flex p-2 hover:bg-gray-200;
 }
